# BillingWatch

./: .env.example  .gitignore  DEPLOY_NOW.sh  Dockerfile  LAUNCH-CHECKLIST.md  LICENSE  LULU_SETUP.md  NEXT_TASKS.md  PRE-LAUNCH-STATUS.md  README.md  README_GITHUB.md  README_NEW.md  REVENUE_PLAN_30DAY.md  TUNNEL_SSH.md  docker-compose.yml  index.html  pyproject.toml  railway.toml  render.yaml  requirements.txt  requirements.txt.bak  serve-landing.py  start-production.sh  webhook_handler.py
.github/: FUNDING.yml
audits/: api_docs_audit_2026-03-11.md  app_start_20260310.txt  beta_feedback_20260310.txt  dashboard_summary_20260310.txt  demo_events_20260310.txt  directory-submission-audit-20260311.md  feature_20260310b.txt  metrics_endpoint_20260310.txt  onboarding_ep_20260310.txt  security-audit-2026-03-09.md  security_20260310.txt  security_20260310_0600.txt  security_20260310_0700.txt  seo-accessibility-audit-2026-03-08.md  slack_discord_20260310.txt  test_run_20260310.txt  unblocked_features_2026-03-11.md  v11_feature_20260310.txt
billingwatch/: __init__.py  __main__.py  cli.py
docs/: API_DOCS.md  BETA_FEEDBACK_EMAIL_14DAY.md  BETA_OUTREACH.md  BLOG_STRIPE_BILLING_BUGS.md  CLOUDFLARED_SETUP.md  COLD_EMAIL_SEQUENCE.md  COLD_OUTREACH_DMS.md  COMMUNITY_OUTREACH_HITLIST.md  DETECTOR_TEST_RESULTS.md  DIRECTORY_SUBMISSIONS.md  DIRECTORY_SUBMISSION_LIST.md  HN_DAY_PLAYBOOK.md  HN_DM_FOLLOWUP.md  HN_LAUNCH_METRICS.md  HN_REPLY_TEMPLATES.md  IH_LAUNCH_CHECKLIST.md  IH_POST.md  LAUNCH-ACTION-PLAN.md  LAUNCH_READINESS.md  LAUNCH_REMINDER_9AM.md  LAUNCH_RESULTS.md  LINKEDIN_LAUNCH_POST.md  MULTI_TENANT_SPEC.md  ONBOARDING_EMAILS.md  OUTREACH_STATUS_REPORT.md  OUTREACH_TARGETS.md  PH_LAUNCH_CHECKLIST.md  PRELAUNCH_FINAL.md  PRELAUNCH_STATUS.md  README.md  (+31 more)
(+66 files in other folders)
