[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billingwatch"
version = "1.0.0"
description = "Self-hosted Stripe billing anomaly detector — catch duplicate charges, fraud spikes, and silent lapses in real time."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ray Bell", email = "hello@tradesight.dev"},
]
keywords = [
    "stripe",
    "billing",
    "anomaly-detection",
    "webhook",
    "self-hosted",
    "fastapi",
    "saas",
    "fraud-detection",
    "billing-monitoring",
    "stripe-webhooks",
    "revenue-monitoring",
    "churn-prevention",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/rmbell09-lang/BillingWatch"
Repository = "https://github.com/rmbell09-lang/BillingWatch"
"Bug Tracker" = "https://github.com/rmbell09-lang/BillingWatch/issues"
Documentation = "https://github.com/rmbell09-lang/BillingWatch#readme"

[project.scripts]
billingwatch = "billingwatch.cli:main"

[tool.setuptools.packages.find]
include = ["billingwatch*"]
